2012-05-31 Dominik Reichardt <dominus@users.sourceforge.net>
	* configure.ac, imagewin/imagewin.cc, imagewin/scale_hq*.*: Added
	  configure option --enable-all-hq-scalers, --enable-hq2x, --enable-hq3x,
	  --enable-hq4x. This makes it easier to leave out HQ scalers for quicker
	  compiles, when you need to test things. By default all HQ scalers are 
	  enabled.

2012-05-30	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* actor.cc: Fixed bug #3530273: cannot switch bodies with Petra.
	* content/sifixes/src/header/si/si_externals.uc: Out of synch comment.
	
2012-05-04	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* objs/chunks.cc: Changed ints->bools.
	* objs/objs.cc: Fixed memory leak caused by non-deletion of terrain game
	  objects on cache-out.
	* objs/objlist.h: Removed theoretical object list corruption bug.

2012-04-15	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* Keyring: Merged in the rollable carpet mod.
	* SI Fixes: Ankh-less ship sails since there is little reason for the locals
	  to add one of the symbols of Beast British's tyrannical commands.

2011-12-03	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* all: Fixing several edge cases in world wrapping.

2011-12-02	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* exult_intrinsics.txt: Updated with new intrinsics create_barge_object and
	  and in_usecode_path. Also documented optional parameters to the following
	  intrinsics: path_run_usecode, move_object, recall_virtue_stone and
	  teleport_to_saved_pos.
	* usecode/intrinsics.cc, usecode/bgintrinsics.h, usecode/siintrinsics.h,
	  ucinternal.h: Added create_barge_object and in_usecode_path intrinsics.
	  Added a new and optional parameter to path_run_usecode that can toggle SI
	  mode (defaults to true in SI, false otherwise).
	* objs/barge.cc: Force a barge to reset its center as well as to gather its
	  objects when it is being moved into the game world. Also, force a reset of